    - menu icons were added for Vista and more recent Windows editions;
      they can be enabled/disabled through the show_menu_icons GUI option
    - one bug in GUI cluster map draw was fixed
    - two bugs in disk optimization algorithm were fixed
    - UD_SIZELIMIT environment variable superseded by UD_FILE_SIZE_THRESHOLD,
      sizelimit GUI option superseded by file_size_threshold option


  Version 5.0.2  2012-01-31
  ------------------------------------------------------------------------------
    - representation of disk clusters on the cluster map was improved
    - one little bug in MFT Zone redraw was fixed
    - registry is now queried for the number of installed keyboards
      to guarantee detection of all installed keyboards
    - Installer: forced default action for .luar files to be "view"
    - the following translations were added:

      Bosanski, Arabic

    - the following translations were updated:

      Dutch

    - some additions to the intro and GUI section of the documentation
    - PDF version of the documentation is now available as separate download


  Version 5.0.1  2012-01-08
  ------------------------------------------------------------------------------
    - few important bugs in disk processing routines were fixed
    - few bugs in MFT optimizer were fixed
    - one bug causing boot time interface freeze 
      after "Good bye..." message was fixed
    - the following translations were updated:

      Finnish, Indonesian, Italian

    - some additions to the tips, FAQ and GUI sections of the documentation


  Version 5.0.0  2011-12-31
  ------------------------------------------------------------------------------
    - the following translations were added:

      Kapampangan, Georgian

    - the following translations were updated:

      Italian, Polish, Swedish, Burmese (Padauk), Finnish, Japanese

    RC2:
    - ability to defragment NTFS attribute lists was added